--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 					</ul>
 				</nav>
 		</header>
-				<form method="GET">
+		<form>
 		Voornaam:	<input type="text" name="voornaam" required><br>
 		Achternaam: <input type="text" name="achternaam" required><br>
 		Email:     	<input type="email" name="email"  required><br>
