--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="hobby.html">Hobby's</a></li>
+						<li><a href="cv.html">CV</a></li>
 					</ul>
 				</nav>
 		</header>
