--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 					<ul>
 						<li><a href="hobby.html">Hobby's</a></li>
 						<li><a href="contact.html">Contact</a></li>
+						<li><a href="cv.html">CV</a></li>
 					</ul>
 				</nav>
 					<h2>Over mezelf</h2><br>
