--- a/cv.html
+++ b/cv.html
@@ -34,7 +34,7 @@
 	</header>
 	<section>
 	<h3>Wie ben ik</h3>
-	<img src="foto cv.jpg" heigth="160"" width="160"/> ![](foto cv.jpg)
+	<img src="foto cv.jpg" heigth="160"" width="160">
 	<p>Naam: Aaron de Boer.</p>
 	<p>Geboorte datum: 21/07/2000</p>
 	<p>Hobby's:</p>
