--- a/cv.html
+++ b/cv.html
@@ -35,6 +35,7 @@
 	<section>
 	<h3>Wie ben ik</h3>
 	<img src="foto cv.jpg" heigth="160"" width="160">
+	<p> De foto van mezelf zoals je mischien kunt zien doet het om een of andere reden niet(bij mij op de laptop wel maar niet via github)dus ik moet even een nieuwe maken of uitzoeken waarom github hem niet laat zien</p>
 	<p>Naam: Aaron de Boer.</p>
 	<p>Geboorte datum: 21/07/2000</p>
 	<p>Hobby's:</p>
@@ -53,7 +54,8 @@
 	<p>Komt nog</p>
 
 	<h3>Werk ervaring</h3>
-	<p>Heb een aantal bijbaantjes gehad maar nog geen echte ict baan.</p>
+	<p>Folder rond gebracht</p>
+	<p>Hulpkracht bij de Lidl</p>
 	</section>	
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
